--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,8 @@ open = "5.0"
 regex = "1.10"
 uuid = { version = "1.20.0", features = ["v4"] }
 
+ctrlc = "3.4"
+
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = "3.0"
