--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ regex = "1.10"
 uuid = { version = "1.20.0", features = ["v4"] }
 
 ctrlc = "3.4"
+tokio-tungstenite = "0.28.0"
+futures-util = "0.3.31"
 
 [dev-dependencies]
 tokio-test = "0.4"
